--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+*, :after, :before {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f9f9f9;
   color: #212529;
@@ -14,9 +18,22 @@ a {
   color: #000;
 }
 
+img {
+  border-style: none;
+}
+
 button {
   background-color: transparent;
   border: none;
   box-shadow: none;
   cursor: pointer;
+}
+
+.container {
+  display: block;
+  margin: 0 auto;
+  padding-left: 5px;
+  padding-right: 5px;
+  position: relative;
+  width: 100%;
 }
