route and page products

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -2,7 +2,6 @@
     font-size: 15px;
     text-align: center;
     color: #a7a7a7;
-
     &__itens {
         justify-self: center;
         display: flex;
@@ -10,5 +9,9 @@
         @media screen and (min-width: 992px) {
             justify-content: left;
         }
+    }
+    &__title {
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 }
