--- a/src/components/ItemGrid/ItemGrid.scss
+++ b/src/components/ItemGrid/ItemGrid.scss
@@ -4,10 +4,13 @@
         text-align: center;
         width: 50%;
         padding: 5px;
-        // display: inline-grid;
         @media screen and (min-width: 992px){
             width: 25%;
         }
+        // &:hover {
+        //     transition: 0.3s;
+        //     opacity: ;
+        // }
     }
     &__image {
         overflow: hidden;
