--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,10 @@ button {
   border: none;
   box-shadow: none;
   cursor: pointer;
+  outline: none;
+  &:hover {
+    color: #DC327B;
+  }
 }
 
 .container {
